k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: afl-fantasy
  labels:
    name: afl-fantasy
    environment: production
